--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -68,7 +68,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:padding="5dp"
-            android:text="@string/expenses" />
+            android:text="@string/expense" />
     </RadioGroup>
 
 </android.support.constraint.ConstraintLayout>
