--- a/app/src/main/res/layout/fragment_expenses.xml
+++ b/app/src/main/res/layout/fragment_expenses.xml
@@ -12,9 +12,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="14dp"
+        android:layout_marginBottom="8dp"
         android:drawableStart="@drawable/ic_calendar"
         android:textColor="@color/colorPrimaryDark"
         app:layout_constraintBottom_toTopOf="@+id/expenses_time"
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="19dp"
+        android:layout_marginBottom="8dp"
         android:drawableStart="@drawable/ic_time"
         android:textColor="@color/colorPrimaryDark"
         app:layout_constraintBottom_toTopOf="@+id/tv_currency"
@@ -42,7 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="7dp"
+        android:layout_marginBottom="12dp"
         android:text="@string/currency"
         android:textColor="#000"
         android:textSize="28sp"
@@ -54,19 +54,16 @@
     <EditText
         android:id="@+id/expense_total"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="15dp"
+        android:layout_height="46dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="7dp"
         android:hint="@string/amount_hint"
         android:importantForAutofill="no"
         android:inputType="numberDecimal"
         android:textColor="#000"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/tv_chooseCategory"
+        app:layout_constraintBaseline_toBaselineOf="@+id/tv_currency"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tv_currency"
-        app:layout_constraintTop_toBottomOf="@+id/expenses_time"
         tools:targetApi="o" />
 
     <TextView
@@ -75,7 +72,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/choose_category"
         android:textColor="#000"
         android:textSize="18sp"
@@ -90,7 +87,7 @@
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="66dp"
+        android:layout_marginBottom="76dp"
         app:layout_constraintBottom_toTopOf="@+id/btn_addPhoto"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -99,23 +96,23 @@
     <ImageView
         android:id="@+id/iv_expensePhoto"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="160dp"
         android:layout_marginStart="17dp"
-        android:layout_marginTop="49dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginBottom="53dp"
+        android:layout_marginTop="68dp"
+        android:layout_marginEnd="27dp"
+        android:layout_marginBottom="68dp"
         app:layout_constraintBottom_toBottomOf="@+id/expense_note"
         app:layout_constraintEnd_toStartOf="@+id/btn_addPhoto"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/spinner_expenseCategory"
+        app:layout_constraintTop_toBottomOf="@+id/tv_chooseCategory"
         app:srcCompat="@color/colorPrimaryDark" />
 
     <Button
         android:id="@+id/btn_addPhoto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="57dp"
-        android:layout_marginBottom="69dp"
+        android:layout_marginEnd="39dp"
+        android:layout_marginBottom="76dp"
         android:text="Button"
         app:layout_constraintBottom_toTopOf="@+id/expense_note"
         app:layout_constraintEnd_toEndOf="parent"
