--- a/app/src/main/res/layout/fragment_expenses.xml
+++ b/app/src/main/res/layout/fragment_expenses.xml
@@ -105,15 +105,15 @@
         app:layout_constraintEnd_toStartOf="@+id/btn_addPhoto"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_chooseCategory"
-        app:srcCompat="@color/colorPrimaryDark" />
+        app:srcCompat="@android:drawable/ic_menu_camera" />
 
     <Button
         android:id="@+id/btn_addPhoto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="39dp"
-        android:layout_marginBottom="76dp"
-        android:text="Button"
+        android:layout_marginBottom="75dp"
+        android:text="add"
         app:layout_constraintBottom_toTopOf="@+id/expense_note"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/iv_expensePhoto"
