--- a/app/src/main/res/layout/fragment_expenses.xml
+++ b/app/src/main/res/layout/fragment_expenses.xml
@@ -47,23 +47,24 @@
         android:textColor="#000"
         android:textSize="28sp"
         app:layout_constraintBottom_toTopOf="@+id/tv_chooseCategory"
-        app:layout_constraintEnd_toStartOf="@+id/expense_total"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/expenses_time" />
 
     <EditText
         android:id="@+id/expense_total"
-        android:layout_width="0dp"
+        android:layout_width="229dp"
         android:layout_height="46dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:hint="@string/amount_hint"
         android:importantForAutofill="no"
         android:inputType="numberDecimal"
         android:textColor="#000"
         android:textSize="18sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/tv_currency"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/tv_chooseCategory"
         app:layout_constraintStart_toEndOf="@+id/tv_currency"
+        app:layout_constraintTop_toBottomOf="@+id/expenses_time"
         tools:targetApi="o" />
 
     <TextView
@@ -135,5 +136,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_addPhoto"
         tools:targetApi="o" />
+
+    <ImageButton
+        android:id="@+id/btn_calculator"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        android:layout_width="55dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/expenses_time"
+        app:srcCompat="@drawable/ic_calculator" />
 
 </android.support.constraint.ConstraintLayout>
