--- a/app/src/main/res/layout/fragment_income.xml
+++ b/app/src/main/res/layout/fragment_income.xml
@@ -36,20 +36,18 @@
 
     <EditText
         android:id="@+id/expense_total"
-        android:layout_width="0dp"
+        android:layout_width="222dp"
         android:layout_height="49dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="8dp"
         android:hint="@string/amount_hint"
         android:importantForAutofill="no"
         android:inputType="numberDecimal"
         android:textColor="#000"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/tv_chooseCategory"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tv_currency"
-        app:layout_constraintTop_toBottomOf="@+id/expenses_date" tools:targetApi="o"/>
+        app:layout_constraintEnd_toStartOf="@+id/btn_calculator"
+        app:layout_constraintTop_toBottomOf="@+id/expenses_date"
+        tools:targetApi="o" />
 
     <TextView
         android:id="@+id/tv_chooseCategory"
@@ -95,5 +93,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.498" tools:targetApi="o"/>
+
+    <ImageButton
+        android:id="@+id/btn_calculator"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        android:layout_width="49dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/expenses_date"
+        app:srcCompat="@drawable/ic_calculator" />
 
 </android.support.constraint.ConstraintLayout>
