--- a/app/src/main/res/menu/fargment_income_list.xml
+++ b/app/src/main/res/menu/fargment_income_list.xml
@@ -7,4 +7,9 @@
         android:title="@string/new_Income"
         app:showAsAction="ifRoom|withText"></item>
 
+    <item
+        android:id="@+id/show_subtitle"
+        android:title="@string/show_subtitle"
+        app:showAsAction="ifRoom"/>
+
 </menu>
