--- a/app/src/main/res/menu/fragment_overview.xml
+++ b/app/src/main/res/menu/fragment_overview.xml
@@ -6,4 +6,9 @@
         android:id="@+id/category"
         android:title="Category Setting"
         app:showAsAction="never"/>
+
+    <item
+        android:id="@+id/show_balance"
+        android:title="@string/show_balance"
+        app:showAsAction="ifRoom"/>
 </menu>
